+ went back to copying computed style on dragImage and appending it to body because it is more robust + fixed bug where snapback transition would never end when source node is not visible / not displayed

--- a/mobile-drag-and-drop-polyfill.css
+++ b/mobile-drag-and-drop-polyfill.css
@@ -1,5 +1,5 @@
 .mobile-dnd-poly-drag-image {
-    opacity: .5;
+    opacity: .5 !important;
 }
 
 .mobile-dnd-poly-drag-image.snapback {
